<resources>
    <string name="app_name">Tracking App</string>

    <string name="google_maps_key">AIzaSyDoJsU23H0ZcHwgd8wSbfzOLKsDsKNm3gU</string>

    <!--AIzaSyDR1E207UpmysacbW8Qb6x_0ZZO-FedWOE-->


    <string name="title_activity_dash_broad">DashBroadActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_job_seeker">JobSeekerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_title">Job Title</string>
    <string name="requirment_form">Requirment Form</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="work_nature">Work Nature</string>
    <string name="estimated_time_in_hours">Estimated Time (in hours)</string>
    <string name="submit">Submit</string>

    <string-array name="work_nature">
        <item>plumbing</item>
        <item>painting</item>
        <item>cleaning</item>
    </string-array>


    <string-array name="jobStatus">

        <item>Pending</item>
        <item>Completed</item>

    </string-array>
    <string-array name="day">

        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="estimateTime">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
        <item>13 hours</item>
        <item>14 hours</item>
        <item>15 hours</item>
        <item>16 hours</item>
        <item>17 hours</item>
        <item>18 hours</item>
        <item>19 hours</item>
        <item>20 hours</item>
        <item>21 hours</item>
        <item>22 hours</item>
        <item>23 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="reports">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
</resources>
