<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.maheshbhattarai.sqlite_database_demo.RequirmentActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/requirment_form"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:hint="@string/job_title"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:hint="@string/customer_name"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/customer_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:hint="@string/customer_address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/estimated_phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:hint="@string/customer_phone_number"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/work_nature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:fontFamily="serif"
        android:hint="@string/work_nature"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/estimated_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:hint="@string/estimated_time_in_hours"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/submit"
        android:onClick="onSubmit"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>
